if exist replace in pandas tutorial

--- a/pandas on Snowflake 101/pandas on Snowflake 101.ipynb
+++ b/pandas on Snowflake 101/pandas on Snowflake 101.ipynb
@@ -104,7 +104,7 @@
         "## Reading Data From Snowflake\n",
         "\n",
         "\n",
-        "### \ud83d\udc0c The Naive approach: Load data into in-memory pandas\n",
+        "### 🐌 The Naive approach: Load data into in-memory pandas\n",
         "\n",
         "There are two common approaches to reading the data to vanilla pandas. However, both of these can be inefficient on large datasets.\n",
         "\n",
@@ -157,7 +157,7 @@
         "name": "cell8"
       },
       "source": [
-        "### \ud83d\ude80 The Better Approach: `pd.read_snowflake`\n",
+        "### 🚀 The Better Approach: `pd.read_snowflake`\n",
         "\n",
         "\n",
         "Now let's try this with pandas on Snowflake. We can read the table directly using Snowpark pandas's [`read_snowflake`](https://docs.snowflake.com/en/developer-guide/snowpark/reference/python/latest/modin/pandas_api/modin.pandas.read_snowflake) command, which reads in the table by creating a reference to the underlying table, rather than pulling all the data into memory. "
@@ -420,7 +420,7 @@
         "\n",
         "To show this in action, you can verify this by checking the `Query History` page to inspect the SQL query generated from your pandas operation.\n",
         "\n",
-        "pandas on Snowflake supports a wide range of operations\u2014like data cleaning, transformation, reshaping, using the familiar pandas API. You can see the list of currently supported APIs in Snowpark pandas [here](https://docs.snowflake.com/en/developer-guide/snowpark/reference/python/latest/modin/supported/index).\n",
+        "pandas on Snowflake supports a wide range of operations—like data cleaning, transformation, reshaping, using the familiar pandas API. You can see the list of currently supported APIs in Snowpark pandas [here](https://docs.snowflake.com/en/developer-guide/snowpark/reference/python/latest/modin/supported/index).\n",
         "\n"
       ]
     },
@@ -449,7 +449,7 @@
       },
       "outputs": [],
       "source": [
-        "filtered_df.to_snowflake(\"FILTERED_REVENUE_TRANSACTIONS\")"
+        "filtered_df.to_snowflake(\"FILTERED_REVENUE_TRANSACTIONS\", if_exists=\"replace\")"
       ]
     },
     {
@@ -558,7 +558,7 @@
         "name": "cell38"
       },
       "source": [
-        "## \ud83c\udf81 Bonus: File read and write operations with pandas\n",
+        "## 🎁 Bonus: File read and write operations with pandas\n",
         "\n",
         "You can use pandas on Snowflake to load in [CSV](https://docs.snowflake.com/en/developer-guide/snowpark/reference/python/latest/modin/pandas_api/modin.pandas.read_csv#modin.pandas.read_csv), [Parquet](https://docs.snowflake.com/en/developer-guide/snowpark/reference/python/latest/modin/pandas_api/modin.pandas.read_parquet#modin.pandas.read_parquet), and [Excel](https://docs.snowflake.com/en/developer-guide/snowpark/reference/python/latest/modin/pandas_api/modin.pandas.read_excel#modin.pandas.read_excel) from stage or local file location. Here is the full list of [I/O functionalities supported](https://docs.snowflake.com/en/developer-guide/snowpark/reference/python/latest/modin/io).\n",
         "\n",
@@ -618,14 +618,14 @@
       "source": [
         "### Conclusion\n",
         "\n",
-        "In this quickstart, you saw how easy it is to get started with pandas on Snowflake. With minimal code changes, your existing pandas workflows can scale to larger datasets and run directly in Snowflake\u2019s engine. \n",
-        "pandas on Snowflake brings the flexibility and familiarity of the pandas API to the power and scale of Snowflake. It provides a simple, unified experience for Python developers to work efficiently with large datasets\u2014all without moving data out of Snowflake.\n",
+        "In this quickstart, you saw how easy it is to get started with pandas on Snowflake. With minimal code changes, your existing pandas workflows can scale to larger datasets and run directly in Snowflake’s engine. \n",
+        "pandas on Snowflake brings the flexibility and familiarity of the pandas API to the power and scale of Snowflake. It provides a simple, unified experience for Python developers to work efficiently with large datasets—all without moving data out of Snowflake.\n",
         "\n",
         "Key benefits include:\n",
         "\n",
-        "- Connected \u2013 Easily access Snowflake data, bring in files, and write results back\n",
-        "- Robust \u2013 Build pipelines that scale seamlessly from development to production\n",
-        "- Flexible \u2013 Use the familiar pandas API to unlock powerful Snowflake analytics\n",
+        "- Connected – Easily access Snowflake data, bring in files, and write results back\n",
+        "- Robust – Build pipelines that scale seamlessly from development to production\n",
+        "- Flexible – Use the familiar pandas API to unlock powerful Snowflake analytics\n",
         "\n",
         "To learn more, see [Snowflake Documentation](https://docs.snowflake.com/developer-guide/snowpark/python/snowpark-pandas). For a more advanced example, check out [this quickstart](https://quickstarts.snowflake.com/guide/data_engineering_pipelines_with_snowpark_pandas/) on how you can build a data engineering pipeline with Snowpark pandas."
       ]
